Mise à jour de la page d'accueil, ajout des fonctionnalités et améliorations du style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><a href="#formulaire">Formulaire</a></li>
         <li><a href="#convertisseur">Convertisseur</a></li>
         <li><a href="#calculatrice">Calculatrice</a></li>
+        <li><a href="#moyenne">Moyenne des Notes</a></li>
+        <li><a href="#theme">Thème</a></li>
       </ul>
     </nav>
   </header>
@@ -23,9 +25,11 @@
       <h2>Formulaire</h2>
       <form id="userForm">
         <label for="name">Nom :</label>
-        <input type="text" id="name" required>
+        <input type="text" id="name" required placeholder="Entrez votre nom">
+        
         <label for="email">Email :</label>
-        <input type="email" id="email" required>
+        <input type="email" id="email" required placeholder="Entrez votre email">
+        
         <button type="submit">Soumettre</button>
       </form>
       <p id="formMessage"></p>
@@ -33,7 +37,7 @@
 
     <section id="convertisseur">
       <h2>Convertisseur de Monnaie</h2>
-      <input type="number" id="amount" placeholder="Montant">
+      <input type="number" id="amount" placeholder="Montant" required>
       <select id="currency">
         <option value="0.92">USD -> EUR</option>
         <option value="1.09">EUR -> USD</option>
@@ -43,10 +47,23 @@
     </section>
 
     <section id="calculatrice">
-      <h2>Calculatrice</h2>
-      <input type="text" id="calcInput" placeholder="Ex : 5+5">
+      <h2>Calculatrice Scientifique</h2>
+      <input type="text" id="calcInput" placeholder="Ex : 5+5" required>
       <button onclick="calculate()">Calculer</button>
       <p id="calcResult"></p>
+    </section>
+
+    <section id="moyenne">
+      <h2>Calcul de Moyenne des Notes</h2>
+      <input type="number" id="noteInput" placeholder="Entrez une note">
+      <button onclick="addNote()">Ajouter une note</button>
+      <button onclick="calculateAverage()">Calculer la Moyenne</button>
+      <p id="averageResult"></p>
+    </section>
+
+    <section id="theme">
+      <h2>Choisir le Thème</h2>
+      <button onclick="toggleTheme()">Basculer entre mode clair/sombre</button>
     </section>
   </main>
 
